# kyoto-flare-detection

./: .gitignore  AGENTS.md  README.md  README_Ja.md  justfile  main.py  pyproject.toml
archive/: flare_create_graphs_backup.ipynb  flare_notebook_old.ipynb  implement_learning_04_05.py
daijiro/: flare_detect_DS_Tuc_A.ipynb  flare_notebook.ipynb  flarepy_DS_Tuc_A.py  flarepy_EK_Dra.py  flarepy_V889_Her.py
data/: tess-response-function-v1.0.csv
docs/: OUTPUTS.md  index.md  integration_plan_daijiro_hiroto.md  method.tex  method_detailed.md  method_section_current_project.md  method_section_current_project_en.md  method_writing_analysis.md  migration_progress.md
hiroto/: flarepy_improved.py
notebooks/: flare_create_graphs.ipynb  flare_detect_DS_Tuc_A 2.ipynb  flare_detect_DS_Tuc_A.ipynb  flare_detect_DS_Tuc_A_new.ipynb  flare_detect_EK_Dra.ipynb  flare_detect_EK_Dra_new.ipynb  flare_detect_V889_Her.ipynb  flare_detect_V889_Her_new.ipynb  flare_detect_template.ipynb  flare_notebook.ipynb  flare_notebook_integrated.ipynb
reports/: consistency_check_report.md
scripts/: analyze_notebook_plots.py  append_verification_cells.py  build_template_from_ekdra.py  build_template_merged.py  compare_profile_results.py  compare_rotation_lomb_methods.py  ensure_notebook_bootstrap.py  extract_method_from_pdf.py  fix_cell1_path_and_imports.py  fix_data_loading.py  fix_notebook.py  fix_notebook_cells.py  fix_notebook_imports.py  inspect_notebook.py  inspect_notebook_v2.py  merge_star_notebooks.py  migrate_graphs.py  migrate_notebooks.py  patch_notebook.py  profile_base_flare_detector.py  refactor_notebook.py  test_imports.py  update_hiroto_daijiro_paths.py  update_notebook_imports.py  verify_V889_Her_s0026.py  verify_data_loading.py  verify_detector_state.py  verify_fix.py
src/: base_flare_detector.py  ds_tuc_a_detector.py  ek_dra_detector.py  flarepy_DS_Tuc_A.py  flarepy_DS_Tuc_A.py.py  flarepy_EK_Dra.py  flarepy_V889_Her.py  v889_her_detector.py
tests/: test_sanity.py
tools/: compare_debug_outputs.py  (+3 more)
(+69 files in other folders)
