[project]
name = "kyoto-flare-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.1.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "pathlib>=1.0.1",
    "plotly>=6.3.0",
    "scipy>=1.16.2",
]
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]