[project]
name = "kyoto-flare-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.1.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "plotly>=6.3.0",
    "kaleido>=0.2.1",
    "scipy>=1.16.2",
]
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "src/archive",
    "**/archive",
    "data",
    "outputs",
    "reports",
    "daijiro",
    "hiroto",
    "notebooks",
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
